<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LoginActivity">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="125dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/welcome_back"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:fontFamily="@font/inter"
            android:text="@string/enter_your_username_amp_password"
            android:textColor="#565656"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="643dp"
            android:layout_height="600dp"
            android:layout_marginTop="72dp"
            android:src="@drawable/ic_circle_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.693"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/username"
            android:textColor="#6B6B6B"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/usernameText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="349dp"
            android:layout_height="70dp"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textColor="#6B6B6B"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.096" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="Password"
            android:textColor="#6B6B6B"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/passwordText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.975" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="349dp"
            android:layout_height="70dp"
            android:layout_marginTop="68dp"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="#6B6B6B"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameText" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backFab"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#D9D9D9"
            android:clickable="true"
            app:fabCustomSize="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back"
            app:tint="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="229dp"
            android:layout_height="64dp"
            android:layout_marginTop="52dp"
            android:backgroundTint="#000000"
            android:text="@string/login"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText"
            app:shapeAppearanceOverlay="@style/buttonShape" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton3"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/forgotten_password"
            android:textAllCaps="false"
            android:textColor="#6B6B6B"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createAccountButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:text="@string/or_create_a_new_account"
            android:textAllCaps="false"
            android:textColor="#6B6B6B"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButton3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>