<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SignUpActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_circle_signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.503" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backFab"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#D9D9D9"
            android:clickable="true"
            app:fabCustomSize="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back"
            app:tint="@null" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="92dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/create_account"
            android:textColor="#000000"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/enter_email_id"
            android:textColor="#6B6B6B"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/emailText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="349dp"
            android:layout_height="60dp"
            android:layout_marginBottom="460dp"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="#6B6B6B"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.096" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/create_username"
            android:textColor="#6B6B6B"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/usernameText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailText"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="349dp"
            android:layout_height="60dp"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textColor="#6B6B6B"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailText"
            app:layout_constraintVertical_bias="0.182" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="57dp"
            android:text="@string/create_password"
            android:textColor="#6B6B6B"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/passwordText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameText"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="349dp"
            android:layout_height="60dp"
            android:layout_marginTop="76dp"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="#6B6B6B"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="229dp"
            android:layout_height="64dp"
            android:layout_marginTop="72dp"
            android:backgroundTint="#000000"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText"
            app:shapeAppearanceOverlay="@style/buttonShape" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>